--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -2569,107 +2569,107 @@ stories:
   domain: http://www.kpcnews.com/
   link: https://www.kpcnews.com/lifestyles/entertainment/image_a6f2cd8e-1bba-5964-a9e1-be0412995108.html
 images:
-- name: christianity-christianity-under-construction-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-electricity.jpg
-- name: machine-road-machine-road-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-bright-sand.jpg
-- name: oldcabin-oldcabin-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-umberto-bocc.jpg
-- name: crow-crow-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-atari-asteroids.jpg
-- name: old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-alberto-giacometti.jpg
-- name: yosemite-yosemite-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-crunch-paper.jpg
-- name: carry-load-carryload-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-wols.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-kand-two.jpg
-- name: adam-smith-adam-smith-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-crafty-painting.jpg
-- name: beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-space-pizza.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kandinsky-bv.jpg
-- name: mosaic-face-mosaic-face-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-constitution.jpg
-- name: castle-wall-DSC-0067-neo-instinct.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-neo-instinct.JPG
-- name: stories-statue-face-open-mouth-colorful-blocks.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-statue-face-open-mouth-colorful-blocks.png
-- name: carry-load-carryload-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-aqua.jpg
-- name: curtain-curtain-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-crafty-painting.jpg
-- name: curtain-curtain-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-wols.jpg
-- name: curtain-curtain-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-blue-brush.jpg
-- name: carry-load-carryload-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-colored-circuits.jpg
-- name: carry-load-carryload-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
-- name: containership-containership-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dry-skin.jpg
-- name: gears-4882162452-fa3126b38d-b-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-constitution.jpg
-- name: store-on-corner-store-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-three.jpg
-- name: mediterranean-mediterranean-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-internet-numbers.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-color.jpg
-- name: old-school-house-old-schoolhouse-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-copper-circuit.jpg
-- name: birdhouse-birdhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-brush.jpg
-- name: gypsymosaic-gypsy-eyes-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-umberto-bocc.jpg
-- name: bordercrossing-bordercrossing-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-colorful-dream.jpg
-- name: crow-crow-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-bright-sand.jpg
-- name: san-francisco-street-view-san-francisco-street-view-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-purple-pond.jpg
-- name: power-lines-power-lines-empty-space-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-dry-skin.jpg
-- name: trucksilo-trucksilo-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-creativity.jpg
-- name: udnie-IMG_6984.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_6984.jpg
-- name: catacombs-catacombs.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs.jpg
-- name: beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-blue-circuit-3.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-atari-asteroids.jpg
-- name: fence-mexico-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-marcel-duchamp.jpg
-- name: anza-borrego-desert-state-park.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/anza-borrego-desert-state-park.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-wols.jpg
-- name: oldcabin-oldcabin-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-crabapple.jpg
-- name: machine-road-machine-road-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-oily-mcoilface.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-ww2-dresden.jpg
-- name: downtown-la-copper-circuit.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-copper-circuit.JPG
-- name: ellis-island-ellis-island-room-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-pablo-blue.jpg
-- name: old-door-lock-old-door-lock-2-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-spagetti-accident.jpg
-- name: beach-rocks-beach-rocks-currents-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-mucha-mult.jpg
-- name: oldtrain-oldtrain-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-sand-paper.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-hot-spicy.jpg
-- name: border-crossing-bordercrossing-kand-two.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-kand-two.png
-- name: beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
+- name: dc-statue-dcstatue-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-post-modern.jpg
+- name: abandonedbuildings_ww2_color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_ww2_color.jpg
+- name: death-valley-death-valley-national-park-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-smooth-ride.jpg
+- name: bluelake-purple-pond-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-38-67.jpg
+- name: store-on-corner-store-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-hot-spicy.jpg
+- name: walled-garden-walled-garden-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-satan-red.jpg
+- name: adam-smith-adam-smith-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-rainbow-festival.jpg
+- name: dc-statue-dcstatue-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-far-away.jpg
+- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+- name: oldcabin-oldcabin-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-spagetti-accident.jpg
+- name: abandonedbuildings_colorful_dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_colorful_dream.jpg
+- name: locked-up-steam-lock-up-steam-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-kand-two.jpg
+- name: hollywood-building-hollywood-building-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-neo-instinct.jpg
+- name: old-church-oldchurch-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-light-dali.jpg
+- name: beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-kandinsky-bv.jpg
+- name: lincoln-memorial-lincolnmemorial-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-color.jpg
+- name: store-on-corner-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
+- name: statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-really-hot.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+- name: mediterranean-mediterranean-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-oily-mcoilface.jpg
+- name: castle-wall-DSC-0067-cinnamon-rolls.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-cinnamon-rolls.JPG
+- name: meadowbutterfly-meadow-butterfly-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-neo-instinct.jpg
+- name: school-clouds-church-clouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-nazi-poster.jpg
+- name: supreme-court-supremecourt-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-feed-people.jpg
+- name: mediterranean-mediterranean-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-dark-soul.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth.png
+- name: ellis-island-ellis-island-room-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-gred-mash.jpg
+- name: store-on-corner-oldcabin-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-crunch-paper.jpg
+- name: dc-statue-dcstatue-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-smooth-ride.jpg
+- name: aws-s3-diamondcreek-diamondcreek-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still-1200.jpg
+- name: old-building-clouds-with-tree-uncle-sam.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-uncle-sam.jpg
+- name: stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-los-angeles-downtow-freeway-blue-circuit-5.jpg
+- name: blossombar-crafty-painting-file-00-00-50-25.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
+- name: blossombar-dark-soul-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-50-62.jpg
+- name: razorcliff-razorcliff-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-colored-circuits.jpg
+- name: docks-docks-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-sand-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-emily-carr.png
+- name: crow_yellow_collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_yellow_collage.jpg
+- name: power-lines-power-lines-empty-space-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-attack-planes.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-post-modern.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-post-modern.JPG
+- name: power-lines-power-lines-empty-space-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-mucha-mult.jpg
+- name: wind-mills-windmills-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-alberto-giacometti.jpg
+- name: cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-colorful-blocks.JPG
+- name: carry-load-carryload-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-purp-paper.jpg
+- name: downtown-trucksilo-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crunch-paper.jpg
+- name: sand-hand-sand-hand-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-mucha-mult.jpg
+- name: aws-s3-stories-cityscape-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-cityscape-dali-three.jpg
+- name: store-on-corner-store-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-rainbow-festival.jpg
 ---
 Jon Watts Worried He'd Missed Michael Keaton Email.&nbsp;Expo Square Showcases New Equine Livestock Stalls In Super Duty Barn.&nbsp;Kevin Spacey Accuser Drops Lawsuit Against Actor.&nbsp;Kevin Spacey Accuser Drops Lawsuit Against Actor.&nbsp;Wisconsin To Consider Lowering Workers' Comp Insurance Rates.&nbsp;Holocaust Survivor And Forgiveness Advocate, Eva Kor.&nbsp;Marshall Couple To Open Winery.&nbsp;Newer Updated Enterprise Businesses Play Musical Chairs.&nbsp;
